--- a/java-backend/java-api/java-api/src/main/resources/application.properties
+++ b/java-backend/java-api/java-api/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 spring.application.name=java-api
 spring.data.mongodb.uri=mongodb+srv://mehmet34:mehmet175e@atlascluster.j3z8vqq.mongodb.net/mydatabase?retryWrites=true&w=majority
+server.port=8081
 
 mehmetkaradana.app.jwtSecret= ======================MehmetKaradana=Spring===========================
 mehmetkaradana.app.jwtExpirationMs= 86400000
+
+management.endpoints.web.exposure.include=prometheus
+management.metrics.export.prometheus.enabled=true
+management.security.enabled=false
